2011-05-18 Johannes Erdmann <johannes.erdmann@cern.ch>, Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>

	* Permutations, SelectionTool, InterfaceD3PD: bug fix for Particles::JetIndex
	* InterfaceD3PD: default is Herwig
	* clean-up
	* tag KLFitter-00-04-16
	* tag KLFitter-00-04-15

2011-05-18 Johannes Erdmann <johannes.erdmann@cern.ch>

	* InterfaceD3PD: re-introduce fix for negative energies (disappeared in KLFitter-00-04-13)
	* tag KLFitter-00-04-14

2011-05-17 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>

	* InterfaceD3PD: bugfix for SignalMCGen, removing TopInputs variables, cleanup
	* tag KLFitter-00-04-13

2011-05-13 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>, Stefan Guindon <stefan.guindon@cern.ch>, Johannes Erdmann <johannes.erdmann@cern.ch>

	* bug fix - erased obsolete (and buggy) LikelioodBase::BTaggingProbability()
	* tag KLFitter-00-04-12

2011-05-11 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>

	* LikelihoodBase: SetBTagging sets all neccessary values
	* DetectorBase: enum for BeamCMEnergy, Setter&Getter
	* InterfaceRoot/D3PD: WriteSignalMCTruth sets flag und MC generator of signal	
	* several classes: Cleaning up flags, remove and rename to more intuitive
	* config.conf + ReadConfigFile: Replace flags with enum read-in, only important config variables
	* runKLFitter.cxx: Adjusting to all the changes
	* tag KLFitter-00-04-11

2011-05-10 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* InterfaceD3PD.cxx: Truth information for partons is now available
	* runKLFitter.cxx: Truth info & matching
	* several classes: Cleaning up flags, new FlagWriteSignalMCTruth
	* tag KLFitter-00-04-10

2011-04-29 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* Particles.cxx: AddParticle makes copy of TLorentzVector which is owned by Particles, delete duplicated code
	* InterfaceD3PD/GoTopTree/LikelihoodTopLeptonJets_JetAngle: Call AddParticle without creating new TLorentzVector