@@ -5,7 +5,8 @@ Version: 2.0 -- 7 TeV
 Version: 4.0 - 7 TeV, R16   
    Version: 4.5 - 7 TeV, R16v2, new binning
    Version: 5.0 - 7 TeV, MC10a
-last change: 30.05.2011 - Boris Lemmer
+   Version: 5.1 - 7 TeV, MC10a, elextrons fixed
+last change: 06.03.2011 - Boris Lemmer
 
 
 The transfer function for electrons is parametrized as:
@@ -27,28 +28,28 @@ p_5 = width2_0  + width2_1 E_truth
 The values are:
 
 0.00 < |eta| < 0.80:
-(0) Parameter "mean1_0":  0.003381;
-(1) Parameter "mean1_1":  -1.117e-05;
-(2) Parameter "width1_0": 0.04182;
-(3) Parameter "width1_1": 0.01163;
-(4) Parameter "scale_0":  0.04045;
-(5) Parameter "scale_1":  0.0003811;
-(6) Parameter "mean2_0":  0.042;
-(7) Parameter "mean2_1":  -2.916e-05;
-(8) Parameter "width2_0": 0.05256;
-(9) Parameter "width2_1": -0.0001288;
+(0) Parameter "mean1_0": 0.003059; 
+(1) Parameter "mean1_1": 9.104e-07; 
+(2) Parameter "width1_0":0.04061; 
+(3) Parameter "width1_1":0.01209; 
+(4) Parameter "scale_0": 0.0709; 
+(5) Parameter "scale_1": -9.812e-05; 
+(6) Parameter "mean2_0": 0.0321; 
+(7) Parameter "mean2_1": 8.396e-05; 
+(8) Parameter "width2_0":0.03569; 
+(9) Parameter "width2_1":0.0002113; 
 
 0.80 < |eta| < 1.37:
-(0) Parameter "mean1_0":  0.006488;
-(1) Parameter "mean1_1":  -1.901e-05;
-(2) Parameter "width1_0": 0.1839;
-(3) Parameter "width1_1": 0.00253;
-(4) Parameter "scale_0":  0.1695;
-(5) Parameter "scale_1":  -0.0007596;
-(6) Parameter "mean2_0":  0.0846;
-(7) Parameter "mean2_1":  -0.0003427;
-(8) Parameter "width2_0": 0.04486;
-(9) Parameter "width2_1": -7.131e-06;
+(0) Parameter "mean1_0":   0.006421;
+(1) Parameter "mean1_1":   -1.669e-05;
+(2) Parameter "width1_0":  0.1852;
+(3) Parameter "width1_1":  0.0027;
+(4) Parameter "scale_0":   0.1503;
+(5) Parameter "scale_1":   -0.0006785;
+(6) Parameter "mean2_0":   0.06228;
+(7) Parameter "mean2_1":   -0.0001844;
+(8) Parameter "width2_0":  0.05562;
+(9) Parameter "width2_1":  -4.032e-05;
 
 1.37 < |eta| < 1.52:
 (0) Parameter "mean1_0":   ---
@@ -63,14 +64,14 @@ The values are:
 (9) Parameter "width2_1":  ---
 
 1.52 < |eta| < 2.50:
-(0) Parameter "mean1_0":  -0.001395;
-(1) Parameter "mean1_1":  3.337e-05;
-(2) Parameter "width1_0": 0.01894;
-(3) Parameter "width1_1": 0.01741;
-(4) Parameter "scale_0":  0.5212;
-(5) Parameter "scale_1":  -0.001815;
-(6) Parameter "mean2_0":  0.06202;
-(7) Parameter "mean2_1":  -0.0001355;
-(8) Parameter "width2_0": 0.07009;
-(9) Parameter "width2_1": -4.91e-05;
+(0) Parameter "mean1_0":  0.001875;
+(1) Parameter "mean1_1":  1.64e-05;
+(2) Parameter "width1_0": 0.06008;
+(3) Parameter "width1_1": 0.01462;
+(4) Parameter "scale_0":  0.4453;
+(5) Parameter "scale_1":  -0.001387;
+(6) Parameter "mean2_0":  0.05974;
+(7) Parameter "mean2_1":  -0.0001244;
+(8) Parameter "width2_0": 0.06978;
+(9) Parameter "width2_1": -4.506e-05;
 
