@@ -1,10 +1,10 @@
-0.001889
-7.114e-06
-0.04639
-0.01128
-0.05762
-4.423e-05
-0.0391
--2.697e-05
-0.04678
-3.723e-05
+0.003059
+9.104e-07
+0.04061
+0.01209
+0.0709
+-9.812e-05
+0.0321
+8.396e-05
+0.03569
+0.0002113
