@@ -1,10 +1,0 @@
-0.003381
--1.117e-05
-0.04182
-0.01163
-0.04045
-0.0003811
-0.042
--2.916e-05
-0.05256
--0.0001288
