@@ -1,10 +1,10 @@
-0.006488
--1.901e-05
-0.1839
-0.00253
-0.1695
--0.0007596
-0.0846
--0.0003427
-0.04486
--7.131e-06
+0.006421
+-1.669e-05
+0.1852
+0.0027
+0.1503
+-0.0006785
+0.06228
+-0.0001844
+0.05562
+-4.032e-05
