@@ -1,10 +1,10 @@
--0.001395
-3.337e-05
-0.01894
-0.01741
-0.5212
--0.001815
-0.06202
--0.0001355
-0.07009
--4.91e-05
+0.001875
+1.64e-05
+0.06008
+0.01462
+0.4453
+-0.001387
+0.05974
+-0.0001244
+0.06978
+-4.506e-05
